[package]
name = "tremor-connectors-aws"
version = "0.13.0-rc.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tremor-connectors = { path = "../tremor-connectors", default-features = false, features = [
    "object-storage",
] }
tremor-common = { path = "../tremor-common", version = "0.13.0-rc.17" }
tremor-system = { path = "../tremor-system", version = "0.13.0-rc.17" }
tremor-value = { path = "../tremor-value", version = "0.13.0-rc.17" }
tremor-config = { path = "../tremor-config", version = "0.13.0-rc.17" }


async-trait = { version = "0.1", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
anyhow = { version = "1", default-features = false }
async-channel = { version = "2", default-features = false }
thiserror = { version = "1", default-features = false }
tokio = { version = "1.34", default-features = false }
log = { version = "0.4", default-features = false }
simd-json = { version = "0.13", default-features = false }
value-trait = { version = "0.8", default-features = false }

aws-sdk-s3 = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "sigv4a",
    "rustls",
    "rt-tokio",
] }
aws-types = { version = "1", default-features = false }
aws-config = { version = "1", default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false }
testcontainers = { version = "0.14", default-features = false }
serial_test = { version = "3.0", default-features = false }
bytes = { version = "1.1", default-features = true }

[features]
integration-harness = ["tremor-connectors/integration-utils"]
