bin = []
bench = []
test = []

[package]
name = "tremor-connectors-azure"
edition = "2021"
version = "0.13.0-rc.29"
authors = ["The Tremor Team"]
homepage = "https://www.tremor.rs"
license = "Apache-2.0"

[dependencies]
tremor-connectors = { path = "../tremor-connectors", version = "0.13.0-rc.29", default-features = false }
tremor-common = { path = "../tremor-common", version = "0.13.0-rc.29" }
tremor-system = { path = "../tremor-system", version = "0.13.0-rc.29" }
tremor-value = { path = "../tremor-value", version = "0.13.0-rc.29" }
tremor-config = { path = "../tremor-config", version = "0.13.0-rc.29" }

azure_core = { version = "0.20.0", default-features = false, features = [
    "enable_reqwest",
    "enable_reqwest_gzip",
    "enable_reqwest_rustls",
] }
serde = "1.0.202"
anyhow = "1.0.83"
async-trait = "0.1.81"
url = "2.5.2"
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
tokio = "1.37.0"
log = "0.4.21"
tremor-script = { version = "0.13.0-rc.29", path = "../tremor-script" }
bytes = "1.6.0"
futures = { version = "0.3.30", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
    "futures-executor",
] }
serde_json = "1.0.120"
beef = "0.5.2"
simd-json = "0.13.10"
mockito = "1.4.0"

[features]
integration-harness = []

[lib]
path = "src/lib.rs"
name = "tremor_connectors_azure"
plugin = false
proc-macro = false
edition = "2021"
required-features = []
crate-type = ["rlib"]
