[package]
name = "tremor-connectors-azure"
edition = "2021"
version = "0.13.0-rc.33"
authors = ["The Tremor Team"]
homepage = "https://www.tremor.rs"
license = "Apache-2.0"

[dependencies]
tremor-connectors = { path = "../tremor-connectors", version = "0.13.0-rc.33", default-features = false }
tremor-common = { path = "../tremor-common", version = "0.13.0-rc.33" }
tremor-system = { path = "../tremor-system", version = "0.13.0-rc.33" }
tremor-value = { path = "../tremor-value", version = "0.13.0-rc.33" }
tremor-config = { path = "../tremor-config", version = "0.13.0-rc.33" }

azure_core = { version = "0.20.0", default-features = false, features = [
    "enable_reqwest",
    "enable_reqwest_gzip",
    "enable_reqwest_rustls",
] }
serde = "1.0.204"
anyhow = "1.0.83"
async-trait = "0.1.81"
url = "2.5.2"
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
tokio = "1.39.2"
log = "0.4.21"
tremor-script = { version = "0.13.0-rc.33", path = "../tremor-script" }
bytes = "1.6.1"
futures = { version = "0.3.30", default-features = false, features = [
    "alloc",
    "std",
    "async-await",
    "futures-executor",
] }
serde_json = "1.0.120"
beef = "0.5.2"
simd-json = "0.14.3"
mockito = "1.4.0"

[features]
integration-harness = []
