[package]
name = "tremor-connectors-gcp"
version = "0.13.0-rc.29"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.tremor.rs"
authors = ["The Tremor Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tremor-connectors = { path = "../tremor-connectors", version = "0.13.0-rc.29", default-features = false }
tremor-connectors-object-storage = { path = "../tremor-connectors-object-storage", version = "0.13.0-rc.29" }
tremor-common = { path = "../tremor-common", version = "0.13.0-rc.29" }
tremor-system = { path = "../tremor-system", version = "0.13.0-rc.29" }
tremor-value = { path = "../tremor-value", version = "0.13.0-rc.29" }
tremor-config = { path = "../tremor-config", version = "0.13.0-rc.29" }
tremor-script = { path = "../tremor-script", version = "0.13.0-rc.29" }

anyhow = { version = "1", default-features = true }
async-trait = { version = "0.1", default-features = true }
futures = { version = "0.3", default-features = true }
http = { version = "0.2", default-features = true }
log = { version = "0.4", default-features = true }
serde = { version = "1.0", default-features = true, features = ["derive"] }
thiserror = { version = "1", default-features = true }

bytes = { version = "1.6", default-features = true }
googapis = { version = "0.6", default-features = true, features = [
    "google-pubsub-v1",
    "google-cloud-bigquery-storage-v1",
    "google-logging-v2",
    "google-storage-v2",
] }
gouth = { version = "0.2", default-features = true }
prost = { version = "0.9.0", default-features = true }
prost-types = { version = "0.9.0", default-features = true }
tokio = { version = "1.39", default-features = true }
tonic = { version = "0.12.2", default-features = true, features = [
    "transport",
    "tls",
] }
hyper = { version = "0.14", default-features = true, features = [
    "server",
    "http1",
    "http2",
    "runtime",
] }
hyper-rustls = { version = "0.24", default-features = true, features = [
    "rustls-native-certs",
    "http1",
    "http2",
    "tokio-runtime",
] }
url = { version = "2.5", default-features = true }
async-channel = { version = "1.9", default-features = true }
async-stream = { version = "0.3", default-features = true }
simd-json-derive = { version = "0.13", default-features = true }
simd-json = { version = "0.13", default-features = true }

[dev-dependencies]
testcontainers = { version = "0.18", default-features = true }
hyper = { version = "0.14", default-features = true, features = [
    "server",
    "http1",
    "http2",
    "runtime",
] }
tokio = { version = "1.39", default-features = true }
value-trait = { version = "0.8" }
test-case = { version = "3", default-features = true }
anyhow = { version = "1" }
tremor-codec = { path = "../tremor-codec", version = "0.13.0-rc.29" }
tempfile = { version = "3", default-features = true }
env_logger = { version = "0.11", default-features = true }
tremor-connectors-test-helpers = { path = "../tremor-connectors-test-helpers", version = "0.13.0-rc.29" }

[features]
integration-harness = []
