[package]
name = "tremor-connectors-object-storage"
version = "0.13.0-rc.30"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.tremor.rs"
authors = ["The Tremor Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tremor-connectors = { path = "../tremor-connectors", version = "0.13.0-rc.30", default-features = false }
tremor-value = { path = "../tremor-value", version = "0.13.0-rc.30" }
tremor-system = { path = "../tremor-system", version = "0.13.0-rc.30" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1", default-features = true }
anyhow = { version = "1", default-features = true }
async-trait = { version = "0.1", default-features = true }
log = { version = "0.4", default-features = true }
