[package]
name = "tremor-connectors-test-helpers"
version = "0.13.0-rc.33"
edition = "2021"
license = "Apache-2.0"
homepage = "https://www.tremor.rs"
authors = ["The Tremor Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = "1.5"
tokio = { version = "1", features = ["sync", "net"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
